# semester_project

./: .gitignore  README.md  automated_evaluation.py  final_evaluations.py  gmm_comparison.py  merge_evaluation.py  mesh_editor.py  mesh_visualizer.py  pipeline_dummy.py  presentation_plots.py  test_cube.ply  two_mesh_evaluation.py  visualize_mesh.py
data/: bunny.ply  bunny_corrupted.ply  bunny_pc.ply  curve.off  rhone_enu.off  rhone_enu_reduced.off
install/: requirements.txt
lib/: evaluation.py  gmm_generation.py  loader.py  merge.py  registration.py  visualization.py
mesh_visualizer/: CMakeLists.txt  package.xml
mesh_visualizer/include/mesh_visualizer/: mesh_visualizer.h
mesh_visualizer/src/: mesh_visualizer_talker.cpp
scripts/: Hotelling tests.ipynb  MIni plots for ST.ipynb
scripts/.ipynb_checkpoints/: Hotelling tests-checkpoint.ipynb  MIni plots for ST-checkpoint.ipynb
var/: visualization_testing.py
var/mesh_visualizer/src/: mesh_visualizer.cpp
